# studies

./: .env  .gitattributes  .gitignore  README.md  binance-1d-spot-stable-pairs.parquet  binance-1d-spot.parquet  binance-spot.ipynb  btc-momentum.ipynb  chronos-2.ipynb  duckdb.ipynb  mean-reversion.ipynb  momentum.ipynb  moving-averages.ipynb  pred-nox-60lb-1fc-pd.parquet  pred-wx-60lb-1fc-pd.parquet  pyproject.toml
binance/: .env  env-template  process-raw-csv.py  resample-1d.py  select-usd-pairs.py  select-usdt-pairs.py
derived/: qqq-2025-11-14-mom-signals.parquet
fundamental/: iwm-2025-11-14.parquet  psq-2025-11-14.parquet  qid-2025-11-14.parquet  qld-2025-11-14.parquet  qqq-2025-11-14.parquet  rwm-2025-11-14.parquet  sds-2025-11-14.parquet  sh-2025-11-14.parquet  spxu-2025-11-14.parquet  spy-2025-11-14.parquet  sqqq-2025-11-14.parquet  sso-2025-11-14.parquet  tna-2025-11-14.parquet  tqqq-2025-11-14.parquet  twm-2025-11-14.parquet  tza-2025-11-14.parquet  upro-2025-11-14.parquet  uwm-2025-11-14.parquet
mean-reversion/: .env  main.py  pyproject.toml
pd-data/: 0g.parquet  1inch.parquet  2z.parquet  a.parquet  aave.parquet  ab.parquet  ada.parquet  aero.parquet  akt.parquet  algo.parquet  ankr.parquet  ape.parquet  apepe.parquet  apt.parquet  ar.parquet  arb.parquet  asbnb.parquet  aster.parquet  astr.parquet  ath.parquet  atom.parquet  avax.parquet  axl.parquet  bat.parquet  bch.parquet  bdx.parquet  beam.parquet  bfusd.parquet  bgb.parquet  bnb.parquet  bnsol.parquet  bonk.parquet  borg.parquet  bsc-usd.parquet  bsv.parquet  btc.b.parquet  btc.parquet  btt.parquet  buidl.parquet  busd.parquet  (+222 more)
polarity/: .gitignore  README.md  env-template  poll-polarity.sh  update-polarity.py
