[project]
name = "studies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "jupyter>=1.1.1",
    "lightweight-charts>=2.1",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pandas-datareader>=0.10.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "setuptools>=78.1.0",
    "stockdex>=1.2.3",
    "yfinance>=0.2.55",
]
