[project]
name = "studies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "binance-historical-data>=0.1.14",
    "dotenv>=0.9.9",
    "duckdb>=1.4.2",
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "jupyter>=1.1.1",
    "lightweight-charts>=2.1",
    "matplotlib>=3.10.1",
    "natsort>=8.4.0",
    "numba>=0.62.1",
    "pandas[pyarrow]>=2.2.3",
    "polars>=1.35.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.8.0",
    "yfinance>=0.2.55",
]
