[project]
name = "mean-reversion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "binance-sdk-spot>=6.0.0",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "pyqt6>=6.10.1",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]
